Remove AI runtime and environment files